# crypto-taxes

./: .env.example  .gitignore  .python-version  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  PLAN_TARGETED_PRICE_OVERRIDES.md  PRICING_REFACTOR_PLAN.md  README.md  claude-plan.md  pyproject.toml  todo.txt
data/: .env  .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml
data/alembic/: env.py
data/scripts/: coinbase_account_history.py  coinbase_list_balances.py  coindesk.py  coinmarketcap.py  fetch_wallet_history.py  kraken_event_probe.py  kraken_row_range_import.py  migrate_ledger_corrections.py  moralis_cache_lookup.py  open_exchange_rates.py  utils.py
data/scripts/coinbase/: README.md  account_history.py  cache_lookup.py
data/scripts/coindesk/: token_price.py
data/scripts/kraken/: README.md  kraken_event_probe.py  kraken_row_range_import.py
data/scripts/moralis/: README.md  cache_lookup.py  client_fetch.py  fetch_wallet_history.py  filter_cache_transactions.py
data/src/: accounts.py  config.py  errors.py  main.py  pydantic_base.py  system_accounts.py  type_defs.py
data/src/api/: README.md  acquisition_disposal.py  api.py  corrections.py  events.py  params.py  price_overrides.py  system_state.py  wallet_balances.py  wallet_projection.py  wallet_tracking.py
data/src/api/dependencies/: __init__.py
data/src/clients/: README.md  coinbase.py  coindesk.py  coinmarketcap.py  errors.py  moralis.py  open_exchange_rates.py
data/src/corrections/: ingestion.py  ledger_corrections.py  replacements.py  seed_events.py  spam.py  validation.py
data/src/crypto_taxes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/src/db/: acquisition_disposal.py  base.py  corrections.py  corrections_common.py  corrections_replacement.py  corrections_spam.py  corrections_store.py  db.py  ledger_corrections.py  ledger_corrections_migration.py  ledger_events.py  mixins.py  models.py  price_cache.py  price_overrides.py  repositories.py  session.py  system_state.py  tax_events.py  transactions_cache.py  tx_cache_coinbase.py  tx_cache_common.py  tx_cache_moralis.py  wallet_projection.py  wallet_tracking.py
data/src/domain/: acquisition_disposal.py  acquisition_disposal_projection.py  base_types.py  correction.py  inventory.py  ledger.py  price_override.py  price_override_resolution.py  pricing.py  projection.py  system_state.py  tax_event.py  validation.py  wallet_balance_tracker.py  wallet_projection.py  wallet_tracking.py
data/src/domain/acquisition_disposal/: __init__.py  constants.py  errors.py  fifo.py  models.py  pipeline_types.py  projector.py  quantities.py  valuation.py
data/src/importers/: __init__.py  seed_events.py
data/src/importers/coinbase/: README.md  __init__.py  coinbase_importer.py
data/src/services/: README.md  coinbase.py  coindesk_source.py  moralis.py  open_exchange_rates_source.py  price_resolver.py  price_service.py  price_sources.py  price_store.py  price_types.py  spam_correction_service.py
data/src/utils/: formatting.py  inventory_summary.py  misc.py  tax_summary.py
data/tests/: README.md  accounts_test.py  conftest.py  constants.py  inventory_summary_test.py  main_system_state_test.py  tax_summary_test.py
data/tests/api/: accounts_api_test.py  acquisition_disposal_api_test.py  conftest.py  corrections_api_test.py  events_api_test.py  price_overrides_api_test.py  replacement_corrections_api_test.py  spam_corrections_api_test.py  system_state_api_test.py  wallet_balances_api_test.py  wallet_projection_api_test.py  wallet_tracking_api_test.py
data/tests/clients/: coinmarketcap_test.py  moralis_service_test.py  open_exchange_rates_test.py
data/tests/corrections/: ingestion_corrections_test.py  ledger_corrections_test.py  replacement_corrections_test.py  seed_events_correction_test.py  spam_and_seed_corrections_test.py  spam_correction_test.py  validation_test.py
data/tests/db/: conftest.py  ledger_corrections_migration_test.py  ledger_corrections_repository_test.py  mixins_test.py  price_overrides_repository_test.py  replacement_corrections_repository_test.py  repositories_test.py  spam_corrections_repository_test.py  system_state_repository_test.py  wallet_projection_repository_test.py  wallet_tracking_repository_test.py
data/tests/domain/: acquisition_disposal_projection_test.py  acquisition_disposal_test.py  conftest.py  inventory_test.py  ledger_test.py  price_override_test.py  wallet_balance_tracker_test.py  wallet_projection_test.py  wallet_tracking_test.py
data/tests/helpers/: ledger.py  random_price_service.py  time_utils.py  time_utils_test.py
data/tests/importers/: coinbase_importer_test.py  kraken_importer_test.py  lido_importer_test.py  moralis_importer_test.py  stakewise_importer_test.py
data/tests/services/: coinbase_service_test.py  coindesk_source_test.py  constants.py  moralis_service_test.py  open_exchange_rates_source_test.py  price_service_test.py  price_sources_test.py  price_store_test.py  spam_correction_service_test.py
data/tests/utils/: seed_events_test.py
(+225 files in other folders)
