[project]
dynamic = ["version"]
name = "crypto-taxes"
requires-python = ">= 3.13"

dependencies = [
    "alembic==1.14.1",
    "SQLAlchemy==2.0.37",
]

[project.optional-dependencies]
dev = [
    "mypy==1.14.1",
    "pytest==8.3.4",
    "ruff==0.9.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
