[project]
dynamic = ["version"]
name = "crypto-taxes"
requires-python = ">= 3.13"

dependencies = [
    "alembic==1.14.1",
    "pydantic==2.10.6",
    "SQLAlchemy==2.0.38",
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.4",
    "ruff==0.9.6",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
