[project]
dynamic = ["version"]
name = "crypto-taxes"
requires-python = ">= 3.13"

dependencies = [
    "alembic==1.16.5",
    "pydantic==2.11.9",
    "pydantic-settings>=2.11.0",
    "requests==2.32.4",
    "SQLAlchemy==2.0.43",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4,<2.32.5",
    "mypy==1.18.2",
    "pytest==8.4.2",
    "ruff==0.13.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
