[project]
dynamic = ["version"]
name = "crypto-taxes"
requires-python = ">= 3.13"

dependencies = [
    "alembic==1.17.2",
    "moralis>=0.1.49",
    "pydantic==2.12.5",
    "pydantic-settings>=2.12.0",
    "requests==2.32.4",
    "SQLAlchemy==2.0.45",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4,<2.32.5",
    "mypy==1.19.0",
    "pytest==9.0.2",
    "ruff==0.14.9",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
