[project]
dynamic = ["version"]
name = "crypto-taxes"
requires-python = ">= 3.13"

dependencies = [
    "alembic==1.18.5",
    "coinbase-advanced-py==1.8.2",
    "fastapi[standard]>=0.139.0",
    "moralis==0.1.49",
    "pydantic==2.13.4",
    "pydantic-settings==2.13.1",
    "requests==2.33.0",
    "SQLAlchemy==2.0.51",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4,<2.32.6",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.20",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = ["coinbase.*", "moralis", "moralis.*", "openapi_evm_api.*"]
ignore_missing_imports = true
